[build-system]
requires = [
    "scikit-build-core>=0.11.6",
    "cython>=3.1.3",
    "cmake>=4.1",
    "numpy>=2.2.6",
]
build-backend = "scikit_build_core.build"

[project]
name = "elbo_sdk"
version = "1.0.1"
description = "Platform-independent SDK for Elbo engine IPC + shared memory"
requires-python = ">=3.11, <3.12"
authors = [
    { name = "Nicholas Wierzbowski", email = "nicholas.wierzbowski@elbo.studio" }
]
dependencies = [
    "numpy>=2.2.6",
]


[tool.scikit-build.build]
verbose = true       # Useful for debugging build logs
targets = ["all"]    # Ensures all CMake targets are built
