[build-system]
requires = ["setuptools>=61", "wheel", "cython>=3.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "elbo_sdk"
version = "1.0.1"
description = "Platform-independent SDK for Elbo engine IPC + shared memory"
requires-python = ">=3.11"
authors = [
    { name = "Nicholas Wierzbowski", email = "nicholas.wierzbowski@elbo.studio" }
]

[tool.setuptools]
packages = ["elbo_sdk"]
package-dir = {"elbo_sdk" = "."}

[tool.setuptools.package-data]
"elbo_sdk" = ["*.so", "*.pyd"]
